update event function refactoring
