# pkg/manager/docs/swagger.json
@@ -580,7 +580,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/manager.AgentGroups"
+                                "$ref": "#/definitions/model.AgentGroups"
                             }
                         }
                     }
@@ -605,7 +605,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/manager.AgentGroups"
+                            "$ref": "#/definitions/model.AgentGroups"
                         }
                     }
                 ],
@@ -613,7 +613,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/manager.AgentGroups"
+                            "$ref": "#/definitions/model.AgentGroups"
                         }
                     }
                 }
@@ -645,7 +645,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/manager.AgentGroups"
+                            "$ref": "#/definitions/model.AgentGroups"
                         }
                     }
                 }
@@ -1023,7 +1023,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/common.KlevrTask"
+                                "$ref": "#/definitions/model.KlevrTask"
                             }
                         }
                     }
@@ -1048,7 +1048,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/common.KlevrTask"
+                            "$ref": "#/definitions/model.KlevrTask"
                         }
                     }
                 ],
@@ -1056,7 +1056,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/common.KlevrTask"
+                            "$ref": "#/definitions/model.KlevrTask"
                         }
                     }
                 }
@@ -1097,7 +1097,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/common.KlevrTask"
+                            "$ref": "#/definitions/model.KlevrTask"
                         }
                     }
                 }
@@ -1138,7 +1138,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/common.KlevrTask"
+                            "$ref": "#/definitions/model.KlevrTask"
                         }
                     }
                 }
@@ -1170,7 +1170,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/common.KlevrTask"
+                            "$ref": "#/definitions/model.KlevrTask"
                         }
                     }
                 }
@@ -1232,7 +1232,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/common.KlevrTaskLog"
+                            "$ref": "#/definitions/model.KlevrTaskLog"
                         }
                     }
                 }
@@ -1351,7 +1351,7 @@
                     "type": "boolean"
                 },
                 "lastAliveCheckTime": {
-                    "$ref": "#/definitions/common.JSONTime"
+                    "$ref": "#/definitions/serialize.JSONTime"
                 },
                 "memory": {
                     "type": "integer"
@@ -1376,7 +1376,7 @@
                 "task": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/common.KlevrTask"
+                        "$ref": "#/definitions/model.KlevrTask"
                     }
                 }
             }
@@ -1395,19 +1395,11 @@
                 }
             }
         },
-        "common.JSONTime": {
-            "type": "object",
-            "properties": {
-                "time.Time": {
-                    "type": "string"
-                }
-            }
-        },
         "common.KlevrCredential": {
             "type": "object",
             "properties": {
                 "createdAt": {
-                    "$ref": "#/definitions/common.JSONTime"
+                    "$ref": "#/definitions/serialize.JSONTime"
                 },
                 "hash": {
                     "type": "string"
@@ -1419,153 +1411,12 @@
                     "type": "string"
                 },
                 "updatedAt": {
-                    "$ref": "#/definitions/common.JSONTime"
+                    "$ref": "#/definitions/serialize.JSONTime"
                 },
                 "value": {
                     "type": "string"
                 },
                 "zoneId": {
-                    "type": "integer"
-                }
-            }
-        },
-        "common.KlevrTask": {
-            "type": "object",
-            "properties": {
-                "agentKey": {
-                    "type": "string"
-                },
-                "callbackUrl": {
-                    "type": "string"
-                },
-                "createdAt": {
-                    "$ref": "#/definitions/common.JSONTime"
-                },
-                "cron": {
-                    "type": "string"
-                },
-                "currentStep": {
-                    "type": "integer"
-                },
-                "eventHookSendingType": {
-                    "type": "string"
-                },
-                "exeAgentChangeable": {
-                    "type": "boolean"
-                },
-                "exeAgentKey": {
-                    "type": "string"
-                },
-                "failedStep": {
-                    "type": "integer"
-                },
-                "hasRecover": {
-                    "type": "boolean"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "isChangedResult": {
-                    "type": "boolean"
-                },
-                "isFailedRecover": {
-                    "type": "boolean"
-                },
-                "log": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "parameter": {
-                    "type": "string"
-                },
-                "result": {
-                    "type": "string"
-                },
-                "schedule": {
-                    "$ref": "#/definitions/common.JSONTime"
-                },
-                "showLog": {
-                    "type": "boolean"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "steps": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/common.KlevrTaskStep"
-                    }
-                },
-                "taskType": {
-                    "type": "string"
-                },
-                "timeout": {
-                    "type": "integer"
-                },
-                "totalStepCount": {
-                    "type": "integer"
-                },
-                "untilRun": {
-                    "$ref": "#/definitions/common.JSONTime"
-                },
-                "updatedAt": {
-                    "$ref": "#/definitions/common.JSONTime"
-                },
-                "zoneId": {
-                    "type": "integer"
-                }
-            }
-        },
-        "common.KlevrTaskLog": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "$ref": "#/definitions/common.JSONTime"
-                },
-                "exeAgentKey": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "log": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "$ref": "#/definitions/common.JSONTime"
-                },
-                "zoneId": {
-                    "type": "integer"
-                }
-            }
-        },
-        "common.KlevrTaskStep": {
-            "type": "object",
-            "properties": {
-                "command": {
-                    "type": "string"
-                },
-                "commandName": {
-                    "type": "string"
-                },
-                "commandType": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "isRecover": {
-                    "type": "boolean"
-                },
-                "seq": {
                     "type": "integer"
                 }
             }
@@ -1630,32 +1481,6 @@
                     "type": "integer"
                 },
                 "port": {
-                    "type": "integer"
-                }
-            }
-        },
-        "manager.AgentGroups": {
-            "type": "object",
-            "properties": {
-                "createdAt": {
-                    "type": "string"
-                },
-                "deletedAt": {
-                    "type": "string"
-                },
-                "groupName": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "platform": {
-                    "type": "string"
-                },
-                "updatedAt": {
-                    "type": "string"
-                },
-                "userId": {
                     "type": "integer"
                 }
             }
@@ -1741,6 +1566,181 @@
                     "type": "string"
                 },
                 "taskid": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.AgentGroups": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "type": "string"
+                },
+                "groupName": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "platform": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.KlevrTask": {
+            "type": "object",
+            "properties": {
+                "agentKey": {
+                    "type": "string"
+                },
+                "callbackUrl": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "$ref": "#/definitions/serialize.JSONTime"
+                },
+                "cron": {
+                    "type": "string"
+                },
+                "currentStep": {
+                    "type": "integer"
+                },
+                "eventHookSendingType": {
+                    "type": "string"
+                },
+                "exeAgentChangeable": {
+                    "type": "boolean"
+                },
+                "exeAgentKey": {
+                    "type": "string"
+                },
+                "failedStep": {
+                    "type": "integer"
+                },
+                "hasRecover": {
+                    "type": "boolean"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isChangedResult": {
+                    "type": "boolean"
+                },
+                "isFailedRecover": {
+                    "type": "boolean"
+                },
+                "log": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "parameter": {
+                    "type": "string"
+                },
+                "result": {
+                    "type": "string"
+                },
+                "schedule": {
+                    "$ref": "#/definitions/serialize.JSONTime"
+                },
+                "showLog": {
+                    "type": "boolean"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "steps": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.KlevrTaskStep"
+                    }
+                },
+                "taskType": {
+                    "type": "string"
+                },
+                "timeout": {
+                    "type": "integer"
+                },
+                "totalStepCount": {
+                    "type": "integer"
+                },
+                "untilRun": {
+                    "$ref": "#/definitions/serialize.JSONTime"
+                },
+                "updatedAt": {
+                    "$ref": "#/definitions/serialize.JSONTime"
+                },
+                "zoneId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.KlevrTaskLog": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "$ref": "#/definitions/serialize.JSONTime"
+                },
+                "exeAgentKey": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "log": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "$ref": "#/definitions/serialize.JSONTime"
+                },
+                "zoneId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.KlevrTaskStep": {
+            "type": "object",
+            "properties": {
+                "command": {
+                    "type": "string"
+                },
+                "commandName": {
+                    "type": "string"
+                },
+                "commandType": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "isRecover": {
+                    "type": "boolean"
+                },
+                "seq": {
+                    "type": "integer"
+                }
+            }
+        },
+        "serialize.JSONTime": {
+            "type": "object",
+            "properties": {
+                "time.Time": {
                     "type": "string"
                 }
             }
